--- a/index.html
+++ b/index.html
@@ -1,15 +1,11 @@
 <!doctype html>
-<html>
-<head>
-  <title>Our Platformer</title>
-  <script src='code/game_levels.js'></script>
-  <script src='code/game.js'></script>
+<script src="code/game.js"></script>
+<script src="code/game_levels.js"></script>
 
-  <link rel='stylesheet' href='css/game.css'>
-</head>
+<link rel="stylesheet" href="css/game.css">
+
 <body>
   <script>
-    runGame(GAME_LEVELS);
+    runGame(GAME_LEVELS, DOMDisplay);
   </script>
 </body>
-</html>
